⚡️: update todos when form submit and render todo

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.todo__list {
+  display: flex;
+  flex-direction: column;
+}
+
+span {
+  margin: 2px 5px;
+}
